--- a/content/styles/style.v2.css
+++ b/content/styles/style.v2.css
@@ -1,5 +1,6 @@
 :root {
   --bg: white;
+  --bg-trans: rgba(225, 225, 225, 0.9);
   --link: #89e365;
   --link-hover: var(--accent);
   --accent: #77bc2d;
@@ -71,6 +72,9 @@ h3 {
 }
 .greenText {
   color: var(--link);
+}
+.centered {
+  text-align: center;
 }
 
 .header {
@@ -158,6 +162,9 @@ h3 {
   margin: 50px 0 50px;
   position: relative;
 }
+.textColumn-cont.nopad {
+  margin: 0;
+}
 .massivetitle {
   margin: 60px 0 60px;
 }
@@ -197,9 +204,9 @@ h3 {
 
 
 .logo-cont  {
-  height: 70%;
+  height: 50%;
   position: absolute;
-  top: 20%; left: 0;
+  top: 25%; left: 0;
 }
 .logo-cont img {
   height: 100%;
@@ -343,9 +350,6 @@ input, textarea, select {
   body {
     font-size: 1.4em;
   }
-  .button {
-    font-size: 1.8em;
-  }
   .menu-cont {
     display: flex;
   }
@@ -411,4 +415,57 @@ input, textarea, select {
   .main-nav.shown {
     transform: translateX(0);
   }
+}
+
+/*contract-boxes*/
+.contract-box {
+  width: 100%;
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+  padding: 8px;
+  display: flex;
+  margin: 3em 0;
+  box-sizing: border-box;
+}
+.contract-thumbnail {
+  width: 15%;
+}
+.squareCont {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.squareCont::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+.square {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 5px;
+}
+.square img {
+  width: 100%; height: 100%;
+  object-fit: cover;
+}
+
+.contractCont {
+  width: 70%;
+  padding: 0 5px 0 12px;
+}
+.contractCont p {
+  margin-bottom: 0.3em;
+}
+.main-contract-title {
+  color: var(--main);
+}
+.buttCont {
+  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
 }
