--- a/content/styles/style.v4.css
+++ b/content/styles/style.v4.css
@@ -90,6 +90,9 @@ h3 {
 .greenText {
   color: var(--link);
 }
+.greyText {
+  color: var(--text-color);
+}
 .centered {
   text-align: center;
 }
@@ -99,7 +102,6 @@ h3 {
   position: sticky; top: 0;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
   z-index: 5;
-  border-bottom: 2px solid var(--test-color);
 }
 .header-wrapper {
   width: var(--largecontentcolumn-width);
@@ -641,9 +643,9 @@ input[type=text], textarea, select {
 }
 
 /*other*/
-.test {
+/* .test {
   border: 1px solid var(--test-color);
 }
 .testbutt {
   background-color: var(--test-color) !important;
-}
+} */
